--- a/demo-javaserverpage-basics/pom.xml
+++ b/demo-javaserverpage-basics/pom.xml
@@ -34,11 +34,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.version}</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
